--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,23 @@
     <artifactId>Kassasystem_Grupp20</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
+
+        <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+        <version>2.7.4</version>
+        <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.9.0</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
+
     <build>
         <pluginManagement>
             <plugins>
